<package format="3">
  <name>agv_bringup</name>
  <version>0.0.1</version>
  <description>Package khởi chạy toàn bộ hệ thống AGV</description>
  <maintainer email="hoang@todo.todo">hoang</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>agv_motor_driver</exec_depend>
  <exec_depend>agv_localization</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>